@@ -1,5 +1,6 @@
 Version 2.02.188 - 
 ==================================
+  Enhance --use-policy percentage rounding.
   Switch code base to use flexible array syntax.
   Preserve uint32_t for seqno handling.
   Switch from mmap to plain read when loading regular files.
